--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 PYTHONEXE=python -B
 TEST_ENV = local
 # DO NOT rename it to PYTHONPATH as it will lead to weird issues!
-PYTHON_INCLUDEPATH=../src/:$(PYTHONPATH)
+PYTHON_INCLUDEPATH=../:$(PYTHONPATH)
 PYTESTARGS=
 # Once there will be more tests we might enable parallelism
 #PYTESTARGS=-n 4
@@ -16,6 +16,6 @@ unit: python
 
 
 python:
-	TEST_FIXTURES=$(shell pwd)/python/fixtures TEST_ENV=$(TEST_ENV) PYTHONPATH=$(PYTHON_INCLUDEPATH) $(PYTHONEXE) -mpytest --doctest-modules $(PYTESTARGS) $(PYTHONTESTS) 
+	TEST_FIXTURES=$(shell pwd)/python/fixtures TEST_ENV=$(TEST_ENV) PYTHONPATH=$(PYTHON_INCLUDEPATH) $(PYTHONEXE) -mpytest --cov=logging_utils $(PYTESTARGS) $(PYTHONTESTS) 
 
 .PHONY: all unit python
