--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 # do not require setup.py
 skipsdist = True
-envlist = py27,py31,py33,py35
+envlist = py27,py31,py33,py34,py35,py36
 
 [testenv]
 setenv =
